--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.3",
+    "mongoose": "6.9.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.5",
     "slugify": "^1.6.6"
